--- a/user-login.html
+++ b/user-login.html
@@ -17,7 +17,7 @@
             <nav class="flex-grow">
                 <ul class="space-y-2 px-4">
                     <li><a href="#" class="block py-2 px-4 rounded hover:bg-green-700">Dashboard</a></li>
-                    <li><a href="#" class="block py-2 px-4 rounded hover:bg-green-700">New Request</a></li>
+                    <li><a href="/user-new-request.html" class="block py-2 px-4 rounded hover:bg-green-700">New Request</a></li>
                     <li><a href="#" class="block py-2 px-4 rounded hover:bg-green-700">View All Requests</a></li>
                     <li><a href="#" class="block py-2 px-4 rounded hover:bg-green-700">Browse Inventory</a></li>
                     <li><a href="#" class="block py-2 px-4 rounded hover:bg-green-700">Schedule Pickup</a></li>
@@ -81,16 +81,8 @@
             </section>
 
             <!-- Quick Actions -->
-            <section class="grid grid-cols-2 gap-4 mb-6">
-                <div class="bg-white p-4 rounded shadow">
-                    <h2 class="text-lg font-bold">Quick Actions</h2>
-                    <ul class="space-y-2 mt-4">
-                        <li><a href="#" class="block py-2 px-4 bg-green-600 text-white rounded hover:bg-green-700">New Request</a></li>
-                        <li><a href="#" class="block py-2 px-4 bg-green-600 text-white rounded hover:bg-green-700">View All Requests</a></li>
-                        <li><a href="#" class="block py-2 px-4 bg-green-600 text-white rounded hover:bg-green-700">Browse Inventory</a></li>
-                        <li><a href="#" class="block py-2 px-4 bg-green-600 text-white rounded hover:bg-green-700">Schedule Pickup</a></li>
-                    </ul>
-                </div>
+            <section class="grid grid-cols-1 gap-4 mb-6">
+                
                 <div class="bg-white p-4 rounded shadow">
                     <h2 class="text-lg font-bold">Frequently Requested Items</h2>
                     <ul class="space-y-2 mt-4">
