--- a/user-login.html
+++ b/user-login.html
@@ -13,6 +13,16 @@
             <div class="p-6">
                 <img src="uc_logo.png" alt="UC CRMS Logo" class="w-16 mx-auto">
                 <h1 class="text-center text-lg font-bold mt-4">UC CRMS</h1>
+                <!-- User Info -->
+                <div class="mt-4 text-center flex flex-col items-center">
+                    <div class="flex items-center justify-center mb-1">
+                        <svg class="w-6 h-6 mr-2 text-green-200" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M12 12c2.7 0 4.5-2.2 4.5-4.5S14.7 3 12 3 7.5 5.2 7.5 7.5 9.3 12 12 12zm0 2c-3 0-9 1.5-9 4.5V21h18v-2.5c0-3-6-4.5-9-4.5z"/>
+                        </svg>
+                        <div class="text-sm font-semibold">Daphnie Pelaez</div>
+                    </div>
+                    <div class="text-xs text-green-200">College of Business Administration</div>
+                </div>
             </div>
             <nav class="flex-grow">
                 <ul class="space-y-2 px-4">
@@ -38,7 +48,7 @@
                     <h1 class="text-2xl font-bold">Centralized Request Monitoring System</h1>
                 </div>
                 <div class="flex items-center space-x-4">
-                    <span class="text-gray-700">UC Jaguars</span>
+                    <span class="text-gray-700">Daphnie Pelaez</span>
                     <button class="text-gray-700">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.5V11a6.002 6.002 0 00-5-5.917V4a2 2 0 10-4 0v1.083A6.002 6.002 0 004 11v3.5c0 .379-.214.725-.595.895L2 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" />
@@ -49,7 +59,7 @@
 
             <!-- Search -->
             <section class="flex justify-between items-center mb-6">
-                <input type="text" placeholder="Search for items..." class="border rounded px-4 py-2 w-full">
+                <input type="text" placeholder="Search for items in the Logistics Management Office Inventory......" class="border rounded px-4 py-2 w-full">
                 <button class="bg-green-600 text-white px-4 py-2 mx-5 rounded hover:bg-green-700">Search</button>
             </section>
             <div class="py-3">
@@ -80,29 +90,56 @@
                 </div>
             </section>
 
-            <!-- Quick Actions -->
-            <section class="grid grid-cols-1 gap-4 mb-6">
-                
-                <div class="bg-white p-4 rounded shadow">
-                    <h2 class="text-lg font-bold">Frequently Requested Items</h2>
-                    <ul class="space-y-2 mt-4">
-                        <li class="flex justify-between">
-                            <span>A4 Bond Paper</span>
-                            <span class="text-green-600">In Stock</span>
-                        </li>
-                        <li class="flex justify-between">
-                            <span>Blue Ballpoint Pens</span>
-                            <span class="text-green-600">In Stock</span>
-                        </li>
-                        <li class="flex justify-between">
-                            <span>Staples</span>
-                            <span class="text-green-600">In Stock</span>
-                        </li>
-                        <li class="flex justify-between">
-                            <span>Stamp Pad</span>
-                            <span class="text-green-600">In Stock</span>
-                        </li>
-                    </ul>
+            <!--Frequently Requested Items-->
+            <section class="gap-4 mb-6 mx-10">
+                <div class="bg-white p-4 rounded shadow m">
+                    <h2 class="text-lg font-bold mb-4">Frequently Requested Items</h2>
+                    <div class="overflow-x-auto">
+                        <table class="min-w-full text-sm">
+                            <thead>
+                                <tr class="text-left text-gray-600">
+                                    <th class="py-1 px-2">Item</th>
+                                    <th class="py-1 px-2">Classification</th>
+                                    <th class="py-1 px-2">In Stock</th>
+                                    <th class="py-1 px-2"></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr class="border-t">
+                                    <td class="py-1 px-2">A4 Bond Paper</td>
+                                    <td class="py-1 px-2 text-gray-500">Office Supplies</td>
+                                    <td class="py-1 px-2 text-green-600 font-semibold">10 reams</td>
+                                    <td class="py-1 px-2">
+                                        <button class="px-3 py-1 bg-green-600 text-white rounded hover:bg-green-700 text-xs">Request</button>
+                                    </td>
+                                </tr>
+                                <tr class="border-t">
+                                    <td class="py-1 px-2">Blue Ballpoint Pens</td>
+                                    <td class="py-1 px-2 text-gray-500">Office Supplies</td>
+                                    <td class="py-1 px-2 text-green-600 font-semibold">50 pcs</td>
+                                    <td class="py-1 px-2">
+                                        <button class="px-3 py-1 bg-green-600 text-white rounded hover:bg-green-700 text-xs">Request</button>
+                                    </td>
+                                </tr>
+                                <tr class="border-t">
+                                    <td class="py-1 px-2">Staples</td>
+                                    <td class="py-1 px-2 text-gray-500">Office Supplies</td>
+                                    <td class="py-1 px-2 text-green-600 font-semibold">20 boxes</td>
+                                    <td class="py-1 px-2">
+                                        <button class="px-3 py-1 bg-green-600 text-white rounded hover:bg-green-700 text-xs">Request</button>
+                                    </td>
+                                </tr>
+                                <tr class="border-t">
+                                    <td class="py-1 px-2">Stamp Pad</td>
+                                    <td class="py-1 px-2 text-gray-500">Office Supplies</td>
+                                    <td class="py-1 px-2 text-green-600 font-semibold">5 pcs</td>
+                                    <td class="py-1 px-2">
+                                        <button class="px-3 py-1 bg-green-600 text-white rounded hover:bg-green-700 text-xs">Request</button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </section>
 
