--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <a href="#" class="text-sm text-green-800 hover:underline float-right">Forgot Password?</a>
                 <br><br>
-                <button type="submit" class="w-full p-2 bg-green-800 text-white rounded hover:bg-green-700 text-lg">LOGIN</button>
+                <button type="button" onclick="window.location.href='user-login.html';" class="w-full p-2 bg-green-800 text-white rounded hover:bg-green-700 text-lg">LOGIN</button>
             </form>
             <div class="mt-5 text-sm">
                 Don't have an account? <a href="#" class="text-green-800 hover:underline">Request Access</a>
