created user requests, fixed sidebar, and changed sidebar to reports

--- a/user-new-request.html
+++ b/user-new-request.html
@@ -28,9 +28,9 @@
                 <ul class="space-y-2 px-4">
                     <li><a href="/user-login.html" class="block py-2 px-4 rounded hover:bg-green-700">Dashboard</a></li>
                     <li><a href="#" class="block py-2 px-4 rounded bg-green-700">New Request</a></li>
-                    <li><a href="/user-browse-inventory.html" class="block py-2 px-4 rounded hover:bg-green-700">View All Requests</a></li>
-                    <li><a href="#" class="block py-2 px-4 rounded hover:bg-green-700">Browse Inventory</a></li>
-                    <li><a href="#" class="block py-2 px-4 rounded hover:bg-green-700">Schedule Pickup</a></li>
+                    <li><a href="/user-requests.html" class="block py-2 px-4 rounded hover:bg-green-700">View All Requests</a></li>
+                    <li><a href="/user-browse-inventory.html" class="block py-2 px-4 rounded hover:bg-green-700">Browse Inventory</a></li>
+                    <li><a href="#" class="block py-2 px-4 rounded hover:bg-green-700">Reports</a></li>
                     <li><a href="#" class="block py-2 px-4 rounded hover:bg-green-700">Help</a></li>
                     <li><a href="#" class="block py-2 px-4 rounded hover:bg-green-700">Settings</a></li>
                 </ul>
