--- a/user-login.html
+++ b/user-login.html
@@ -9,7 +9,7 @@
 <body class="bg-gray-100 font-sans">
     <div class="flex">
         <!-- Sidebar -->
-        <aside class="w-64 bg-green-900 text-white h-screen flex flex-col">
+        <aside class="w-64 bg-green-900 text-white h-screen flex flex-col fixed top-0 left-0 z-30">
             <div class="p-6">
                 <img src="uc_logo.png" alt="UC CRMS Logo" class="w-16 mx-auto">
                 <h1 class="text-center text-lg font-bold mt-4">UC CRMS</h1>
@@ -41,9 +41,9 @@
         </aside>
 
         <!-- Main Content -->
-        <main class="flex-grow p-6">
+        <main class="flex-grow p-6 ml-64">
             <!-- Header -->
-            <header class="flex justify-between items-center mb-6">
+            <header class="flex justify-between items-center mb-6 bg-white bg-opacity-90 sticky top-0 z-20 p-4 rounded shadow">
                 <div>
                     <h1 class="text-2xl font-bold">Centralized Request Monitoring System</h1>
                 </div>
