added new request and current request form for admin

--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -27,7 +27,8 @@
             </div>
             <nav class="flex-grow">
                 <ul class="space-y-2 px-4">
-                    <li><a href="#" class="block py-2 px-4 rounded bg-red-700">Dashboard</a></li>
+                    <li><a href="admin-dashboard.html" class="block py-2 px-4 rounded bg-red-700">Dashboard</a></li>
+                    <li><a href="admin-new-request.html" class="block py-2 px-4 rounded hover:bg-red-700">New Request</a></li>
                     <li><a href="#" class="block py-2 px-4 rounded hover:bg-red-700">My Requests</a></li>
                     <li><a href="#" class="block py-2 px-4 rounded hover:bg-red-700">Department Requests</a></li>
                     <li><a href="#" class="block py-2 px-4 rounded hover:bg-red-700">Reports</a></li>
