fixed some corrections given

--- a/user-login.html
+++ b/user-login.html
@@ -108,33 +108,101 @@
                                 <tr class="border-t">
                                     <td class="py-1 px-2">A4 Bond Paper</td>
                                     <td class="py-1 px-2 text-gray-500">Office Supplies</td>
-                                    <td class="py-1 px-2 text-green-600 font-semibold">10 reams</td>
-                                    <td class="py-1 px-2">
-                                        <button class="px-3 py-1 bg-green-600 text-white rounded hover:bg-green-700 text-xs">Request</button>
+                                    <td class="py-0.5 px-1">
+                                        <span class="inline-block bg-green-50 text-green-700 text-xs font-semibold px-3 py-1 rounded-full border border-green-200">In Stock: 245</span>
+                                    </td>
+                                    <td class="py-0.5 px-1">
+                                        <button class="text-green-600 font-semibold text-sm hover:underline ml-2">Request</button>
                                     </td>
                                 </tr>
                                 <tr class="border-t">
                                     <td class="py-1 px-2">Blue Ballpoint Pens</td>
                                     <td class="py-1 px-2 text-gray-500">Office Supplies</td>
-                                    <td class="py-1 px-2 text-green-600 font-semibold">50 pcs</td>
-                                    <td class="py-1 px-2">
-                                        <button class="px-3 py-1 bg-green-600 text-white rounded hover:bg-green-700 text-xs">Request</button>
+                                    <td class="py-0.5 px-1">
+                                        <span class="inline-block bg-green-50 text-green-700 text-xs font-semibold px-3 py-1 rounded-full border border-green-200">In Stock: 120</span>
+                                    </td>
+                                    <td class="py-0.5 px-1">
+                                        <button class="text-green-600 font-semibold text-sm hover:underline ml-2">Request</button>
                                     </td>
                                 </tr>
                                 <tr class="border-t">
                                     <td class="py-1 px-2">Staples</td>
                                     <td class="py-1 px-2 text-gray-500">Office Supplies</td>
-                                    <td class="py-1 px-2 text-green-600 font-semibold">20 boxes</td>
-                                    <td class="py-1 px-2">
-                                        <button class="px-3 py-1 bg-green-600 text-white rounded hover:bg-green-700 text-xs">Request</button>
+                                    <td class="py-0.5 px-1">
+                                        <span class="inline-block bg-yellow-50 text-yellow-700 text-xs font-semibold px-3 py-1 rounded-full border border-yellow-200">Low Stock: 8</span>
+                                    </td>
+                                    <td class="py-0.5 px-1">
+                                        <button class="text-green-600 font-semibold text-sm hover:underline ml-2">Request</button>
                                     </td>
                                 </tr>
                                 <tr class="border-t">
                                     <td class="py-1 px-2">Stamp Pad</td>
                                     <td class="py-1 px-2 text-gray-500">Office Supplies</td>
-                                    <td class="py-1 px-2 text-green-600 font-semibold">5 pcs</td>
-                                    <td class="py-1 px-2">
-                                        <button class="px-3 py-1 bg-green-600 text-white rounded hover:bg-green-700 text-xs">Request</button>
+                                    <td class="py-0.5 px-1">
+                                        <span class="inline-block bg-red-50 text-red-700 text-xs font-semibold px-3 py-1 rounded-full border border-red-200">Out of Stock</span>
+                                    </td>
+                                    <td class="py-0.5 px-1">
+                                        <button class="text-gray-400 font-semibold text-sm cursor-not-allowed ml-2" disabled>Request</button>
+                                    </td>
+                                </tr>
+                                <tr class="border-t">
+                                    <td class="py-1 px-2">Yellow Legal Pad</td>
+                                    <td class="py-1 px-2 text-gray-500">Office Supplies</td>
+                                    <td class="py-0.5 px-1">
+                                        <span class="inline-block bg-green-50 text-green-700 text-xs font-semibold px-3 py-1 rounded-full border border-green-200">In Stock: 60</span>
+                                    </td>
+                                    <td class="py-0.5 px-1">
+                                        <button class="text-green-600 font-semibold text-sm hover:underline ml-2">Request</button>
+                                    </td>
+                                </tr>
+                                <tr class="border-t">
+                                    <td class="py-1 px-2">Whiteboard Marker</td>
+                                    <td class="py-1 px-2 text-gray-500">Office Supplies</td>
+                                    <td class="py-0.5 px-1">
+                                        <span class="inline-block bg-yellow-50 text-yellow-700 text-xs font-semibold px-3 py-1 rounded-full border border-yellow-200">Low Stock: 5</span>
+                                    </td>
+                                    <td class="py-0.5 px-1">
+                                        <button class="text-green-600 font-semibold text-sm hover:underline ml-2">Request</button>
+                                    </td>
+                                </tr>
+                                <tr class="border-t">
+                                    <td class="py-1 px-2">USB Flash Drive 16GB</td>
+                                    <td class="py-1 px-2 text-gray-500">IT Supplies</td>
+                                    <td class="py-0.5 px-1">
+                                        <span class="inline-block bg-green-50 text-green-700 text-xs font-semibold px-3 py-1 rounded-full border border-green-200">In Stock: 30</span>
+                                    </td>
+                                    <td class="py-0.5 px-1">
+                                        <button class="text-green-600 font-semibold text-sm hover:underline ml-2">Request</button>
+                                    </td>
+                                </tr>
+                                <tr class="border-t">
+                                    <td class="py-1 px-2">Ethernet Cable</td>
+                                    <td class="py-1 px-2 text-gray-500">IT Supplies</td>
+                                    <td class="py-0.5 px-1">
+                                        <span class="inline-block bg-green-50 text-green-700 text-xs font-semibold px-3 py-1 rounded-full border border-green-200">In Stock: 15</span>
+                                    </td>
+                                    <td class="py-0.5 px-1">
+                                        <button class="text-green-600 font-semibold text-sm hover:underline ml-2">Request</button>
+                                    </td>
+                                </tr>
+                                <tr class="border-t">
+                                    <td class="py-1 px-2">Filing Folder</td>
+                                    <td class="py-1 px-2 text-gray-500">Office Supplies</td>
+                                    <td class="py-0.5 px-1">
+                                        <span class="inline-block bg-green-50 text-green-700 text-xs font-semibold px-3 py-1 rounded-full border border-green-200">In Stock: 100</span>
+                                    </td>
+                                    <td class="py-0.5 px-1">
+                                        <button class="text-green-600 font-semibold text-sm hover:underline ml-2">Request</button>
+                                    </td>
+                                </tr>
+                                <tr class="border-t">
+                                    <td class="py-1 px-2">Correction Tape</td>
+                                    <td class="py-1 px-2 text-gray-500">Office Supplies</td>
+                                    <td class="py-0.5 px-1">
+                                        <span class="inline-block bg-red-50 text-red-700 text-xs font-semibold px-3 py-1 rounded-full border border-red-200">Out of Stock</span>
+                                    </td>
+                                    <td class="py-0.5 px-1">
+                                        <button class="text-gray-400 font-semibold text-sm cursor-not-allowed ml-2" disabled>Request</button>
                                     </td>
                                 </tr>
                             </tbody>
