--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             </div>
             <h1 class="text-lg text-green-800 mb-2">Centralized Request Monitoring System</h1>
             <p class="text-sm text-gray-800 mb-5">Welcome Back!<br>Sign in to your account</p>
-            <form>
-                <input type="email" placeholder="Email Address" required class="w-full p-2 mb-3 border border-gray-300 rounded">
+            <form id="loginForm">
+                <input type="email" id="email" placeholder="Email Address" required class="w-full p-2 mb-3 border border-gray-300 rounded">
                 <input type="password" placeholder="Password" required class="w-full p-2 mb-3 border border-gray-300 rounded">
                 <div class="text-left">
                     <input type="checkbox" id="remember-me" class="mr-2">
@@ -23,12 +23,27 @@
                 </div>
                 <a href="#" class="text-sm text-green-800 hover:underline float-right">Forgot Password?</a>
                 <br><br>
-                <button type="button" onclick="window.location.href='user-login.html';" class="w-full p-2 bg-green-800 text-white rounded hover:bg-green-700 text-lg">LOGIN</button>
+                <button type="submit" class="w-full p-2 bg-green-800 text-white rounded hover:bg-green-700 text-lg">LOGIN</button>
             </form>
             <div class="mt-5 text-sm">
                 Don't have an account? <a href="#" class="text-green-800 hover:underline">Request Access</a>
             </div>
         </div>
     </div>
+    <script>
+        document.getElementById('loginForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const email = document.getElementById('email').value.trim().toLowerCase();
+            if (email === 'admin01@uc-crms.com') {
+                window.location.href = 'admin-dashboard.html';
+            } else if (email === 'user01@uc-crms.com') {
+                window.location.href = 'user-login.html';
+            } else if (email === 'finance01@uc-crms.com') {
+                window.location.href = 'finance-dashboard.html';
+            } else {
+                alert('Wrong password');
+            }
+        });
+    </script>
 </body>
 </html>
